--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^9.7.0",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.1",
     "node": "^20.16.0",
     "nodejs": "^0.0.0",
