--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "GhostError",
@@ -31,7 +34,11 @@
     "nodemon": "^3.1.4",
     "pino": "^9.3.2",
     "pino-http": "^10.2.0",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "swagger-ui-express": "^5.0.1"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@redocly/cli": "^1.21.1"
+  }
 }
