--- a/swagger/paths/contacts/get.yaml
+++ b/swagger/paths/contacts/get.yaml
@@ -1,108 +1,96 @@
-paths:
-  /contacts:
-    get:
-      tags:
-        - Contacts
-      summary: Get a list of contacts
-      operationId: getContacts
-      description: Retrieve a list of contacts with optional query parameters for filtering, sorting, and pagination.
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: query
-          name: page
-          schema:
-            type: integer
-          example: 1
-          description: The page number to retrieve. Defaults to 1.
-        - in: query
-          name: perPage
-          schema:
-            type: integer
-          example: 10
-          description: The number of contacts per page. Defaults to 10.
-        - in: query
-          name: sortBy
-          schema:
-            type: string
-            example: 'name'
-          description: The field by which to sort the contacts. Default is `_id`.
-        - in: query
-          name: sortOrder
-          schema:
-            type: string
-            enum: ['asc', 'desc']
-            example: 'asc'
-          description: The order of sorting. Can be `asc` for ascending or `desc` for descending.
-        - in: query
-          name: isFavourite
-          schema:
-            type: boolean
-            example: true
-          description: Filter contacts by their favourite status.
-        - in: query
-          name: contactType
-          schema:
-            type: string
-            enum: ['work', 'home', 'personal']
-            example: 'personal'
-          description: Filter contacts by type.
-        - in: query
-          name: name
-          schema:
-            type: string
-            example: 'John Doe'
-          description: Filter contacts by name.
-      responses:
-        '200':
-          description: Successfully retrieved list of contacts.
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - status
-                  - message
-                  - data
-                properties:
-                  status:
-                    type: integer
-                    example: 200
-                  message:
-                    type: string
-                    example: Successfully retrieved contacts.
-                  data:
-                    type: object
-                    required:
-                      - data
-                      - page
-                      - perPage
-                      - totalItems
-                      - totalPages
-                      - hasNextPage
-                      - hasPreviousPage
-                    properties:
-                      data:
-                        type: array
-                        items:
-                          $ref: '../../components/schemas/contact.yaml'
-                      page:
-                        type: number
-                        example: 1
-                      perPage:
-                        type: number
-                        example: 10
-                      totalItems:
-                        type: number
-                        example: 100
-                      totalPages:
-                        type: number
-                        example: 10
-                      hasNextPage:
-                        type: boolean
-                        example: true
-                      hasPreviousPage:
-                        type: boolean
-                        example: false
-        '401':
-          $ref: '../../components/responses/401.yaml'
+tags:
+  - Contacts
+summary: Get list of contacts
+operationId: getAllContacts
+description: 'Get list of contacts. You can get access only to contacts added by you'
+security:
+  - bearerAuth: []
+parameters:
+  - in: query
+    name: page
+    schema:
+      type: integer
+    example: 1
+  - in: query
+    name: perPage
+    schema:
+      type: integer
+      example: 10
+  - in: query
+    name: sortBy
+    schema:
+      type: string
+      example: 'name'
+    description: "All contact's fields can be mentioned. Default value - name"
+  - in: query
+    name: sortOrder
+    schema:
+      type: string
+      enum: ['asc', 'desc']
+      example: 'asc'
+  - in: query
+    name: isFavourite
+    schema:
+      type: boolean
+      example: false
+  - in: query
+    name: contactType
+    schema:
+      type: string
+      enum: ['work', 'home', 'personal']
+      example: home
+
+responses:
+  '200':
+    description: Successfully found contacts!
+    content:
+      application/json:
+        schema:
+          type: object
+          required:
+            - status
+            - message
+            - data
+          properties:
+            status:
+              type: integer
+              example: 200
+            message:
+              type: string
+              example: Successfully found contacts!
+            data:
+              type: object
+              required:
+                - data
+                - page
+                - perPage
+                - totalItems
+                - totalPages
+                - hasPreviousPage
+                - hasNextPage
+              properties:
+                data:
+                  type: array
+                  items:
+                    $ref: ../../components/schemas/contact.yaml
+                page:
+                  type: number
+                  example: 2
+                perPage:
+                  type: number
+                  example: 4
+                totalItems:
+                  type: number
+                  example: 4
+                totalPages:
+                  type: number
+                  example: 4
+                hasPreviousPage:
+                  type: boolean
+                  example: true
+                hasNextPage:
+                  type: boolean
+                  example: false
+
+  '401':
+    $ref: ../../components/responses/contacts/401.yaml
